css/custom.css
@font-face {
    font-family: 'Open Sans';
    src: url('../fonts/OpenSans-Regular.ttf');
}

@font-face {
    font-family: 'cwc';
    src: url('../fonts/cwc.otf');
}

body{
  font-family: 'Open Sans', sans-serif;
}

.fullscreen{
  min-height: 100vh;
}

#mainSegment{
  background: white;
}

#pictureSegment{
  background-image: url('../images/bg.jpg');
  /* background-image: url('../images/tiabanyu-min.jpg'); */
  background-size: cover;
  background-position: center;
}

#mapSegment{
  background: white;
}

.main.grid > .row > .column{
  padding: 0;
}

#mainGrid > .row{
  padding-bottom: 0;
}

#secondGrid > .row{
  padding: 0;
}

#countD, #countH, #countM, #countS{
  font-family: 'Staatliches';
  font-size: 28pt;
  opacity: 0.75;
}

#logoImage{
  opacity: 0.75;
  width: 70%;
}

.countDesc{
  font-family: 'Staatliches';
  font-size: 18pt;
  opacity: 0.4;
  margin-right: 10px;
  margin-left: 2px;
}

@media only screen and (max-device-width: 600px) {
  #mainGrid > .row > .ten.wide.column{
    display: none;
  }
}

